--- a/texlive/texk/kpathsea/ChangeLog
+++ b/texlive/texk/kpathsea/ChangeLog
@@ -1,3 +1,17 @@
+2019-07-26  Karl Berry  <karl@tug.org>
+
+	* texmf.cnf (TEXINPUTS, etc.): include explicit latex,
+	element at end so that files under latex/ are preferred to those
+	under latex-dev/. From Ulrike Fischer.
+
+	* texmf.cnf (TEXINPUTS.latex-dev, *-dev): new -dev format
+	names for LaTeX pre-release testing.
+
+2019-07-24  Akira Kakuto  <kakuto@w32tex.org>
+
+	* texmf.cnf: Define command_line_encoding = utf-8 for
+	Windows only.
+
 2019-07-11  Karl Berry  <karl@tug.org>
 
 	* texmf.cnf (TEXINPUTS.lua{,jit}hb{,la}tex): four new engines,
